  using special module_preload.inc file. If this file exists it will be loaded
  instead of module.inc and module.inc will only be loaded when a call to 
  getModule(...) has been made. NOTE: this means modules are *not* loaded in 
  the global space anymore! [Peter]
+ Added getNameSpace() to atkSessionManager. [Ivo]
+ Added ucfirst(string) to javascript/tools.js. [Boy] 
* Fixed al lot of PHP notices (error_reporting set to E_ALL). [Martin]
* Fixed mlsplitter::getInstance wich always created a new instance. [Martin]
* Fixed atkonetoonerelation::load() wich didn't set the
   destination filter when using master mode. [Martin]
* Fixed possible sql injection in db authentication. [Ivo]
* atkmlsplitter::addmlcondition() is now recursive to support relations
  with multiple mlnodes. [Martin]
* Added include/exclude lists as param for addmlcondition(). [Sandy]
* Improvements to atkImportHandler:
  * Some functional decomposition applied.
  * Updated documentation.
  * Improved error handling, import documents are validated before 
    they are added. 
  * Fixed bug that would cause first field never to be properly recognized
    at analysis time. [Boy]
* Currency attribute no longer formats the number as a decimal as 
  the numberattribute from which it extends does this anyway. [Boy]
* Fixed extended searching on OneToOne relations. [Boy]
* Removed a call-time-pass-by-reference from the oci9 driver. [Ivo]
* Fixed numerous php notices. (ATK now runs better when error_reporting set to
  E_ALL). [Ivo]
* The alphabetical index no longer breaks the search button. (bug #415) [Ivo]
* Made atkListAttribute searchable in embedded OneToMany. [Yury]
* Test fix: atkTextAttribute's unit testcase did not do a proper roundtrip
  check, causing the test to fail on Oracle installs. [Ivo]
* Changed atkLanguage stringid fallback module_node_stringid is now 
  the most important, followed by node_stringid and finally stringid. [Boy]