@@ -177,6 +177,7 @@ Eldad Ran                             <eldad@tele-concept.com>
 Arnold Cano                           <arnoldc@mcmservice.com>
 Danny Peeters                         <danny@ibuildings.nl>
 Alberto Galanti                       <alberto@officinadigitale.it>
+Bas de Nooijer                        <bas@ibuildings.nl>
 
 Names between [] are the names they are refered by in the CHANGES file. (If
 different from their first name).
